fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -158,8 +158,6 @@ html, body {
     margin-top: 45px;
 }
 
-body {
-    overflow: hidden;
- }
+
 
 
